--- a/bonch-app/src/components/main/orderBlock/orderBlock.css
+++ b/bonch-app/src/components/main/orderBlock/orderBlock.css
@@ -1,10 +1,41 @@
-.order-block{
-    width: 95%;
-    height: 100px;
-    background-color: rgb(177, 179, 179);
-    margin-top: 1%;
-    margin-bottom: 1%;
-    border-radius: 15px;
+.order-block {
+    position: relative;
+    height: 90px;
+    background-color: var(--blockColor, #d9d9d9);
+    border-radius: 10px;
+    padding: 16px;
+    margin: 10px 0;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     text-align: center;
-    font-size: 20px;
+    width: 85%;
+    color: white;
+}
+.order-block button{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 0;
+    width: 30px;
+    height: 30px;
+    border: none;
+    background-color:#FF0000;
+    color: white;
+    border-radius: 30px;
+}
+.deleteButton {
+    position: absolute; /* Позволяет позиционировать кнопку в верхнем правом углу */
+    top: 10px; /* Отступ сверху */
+    right: 10px; /* Отступ справа */
+    background: none; /* Убираем фон */
+    border: none; /* Убираем рамку */
+    cursor: pointer; /* Указываем, что это кнопка */
+    color: red; /* Цвет кнопки */
+    font-size: 18px; /* Размер шрифта для кнопки */
+}
+
+.order-preview, .order-price, .time-left {
+    margin: 5px 0; /* Отступы между строками */
 }
