--- a/bonch-app/src/components/header/addDeadline/addDeadlineModal/addDeadlineModal.css
+++ b/bonch-app/src/components/header/addDeadline/addDeadlineModal/addDeadlineModal.css
@@ -1,4 +1,67 @@
 .addDeadline{
     display: flex;
     flex-direction: column;
+    font-family: 'AKONY', sans-serif;
+}
+.modal-text{
+    font-size: 18px;
+    margin-bottom: 3%;
+}
+.modal-content {
+    border-radius: 10px; /* Закругленные углы */
+    box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1); /* Тень для глубины */
+    padding: 20px; /* Отступы внутри модального окна */
+    max-width: 400px; /* Максимальная ширина */
+    margin: auto; /* Центрирование */
+}
+
+.addDeadline {
+    display: flex; /* Используем flexbox для выравнивания */
+    flex-direction: column; /* Вертикальное расположение элементов */
+    gap: 6px;   
+}
+.error{
+    color: red;
+}
+.addDeadline input::placeholder{
+}
+.data{
+    font-size: 11px;
+}
+.addDeadline input {
+    background-color: #D9D9D9;
+    height: 50px;
+    text-align: center;
+    border-radius: 40px;
+    padding: 10px; /* Отступы внутри полей */
+    border: none; /* Цвет рамки */
+    font-family: 'AKONY', sans-serif;
+}
+.lastInput{
+    border-bottom: 1px;
+}
+.addDeadline button {
+    background-color: #05FF0E;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    padding: 10px;
+    font-size: 16px;
+    cursor: pointer;
+    height: 60px;
+    border-radius: 20px;
+    font-family: 'AKONY', sans-serif;
+}
+.addDeadline input::placeholder{
+    font-family: 'AKONY', sans-serif;
+}
+button.close-button {
+    margin-top: 20px;
+    height: 60px;
+    border-radius: 20px;
+    font-family: 'AKONY', sans-serif;
+    margin-bottom: 20px;
+    border: none;
+    width: 100%;
+    border: 2px solid black;
 }
