--- a/bonch-app/src/components/main/main.css
+++ b/bonch-app/src/components/main/main.css
@@ -1,12 +1,49 @@
 .main-container{
     flex: 1;
     overflow-y: auto; 
-    padding: 20px; 
-    background-color: #ffffff;
-    margin-bottom: 9%;
+}
+.search-input{
+    height: 50px;
+    border-radius: 30px;
+    width: 95%;
+    text-align: center;
+    background-color:#D9D9D9;
+    font-size: 2em;
+    color: white;
+    border: none;
+    font-family: 'AKONY', sans-serif;
+}
+input::placeholder {
+    color: white;
+    font-family: 'AKONY', sans-serif;
+}
+.noDeadline{
+    color: white;
+    position: absolute;
+    top: 50%;   
 }
 .order-container{
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+.fixed-button{
+    position: fixed; /* Фиксированное позиционирование */
+    bottom: 20px; /* Отступ от нижней части окна */
+    width: 60px;
+    height: 60px;
+    right: 20px; /* Отступ от правой части окна */
+    background-color: #37AD00; /* Цвет фона кнопки */
+    color: white; /* Цвет текста */
+    border: none; /* Убираем рамку */
+    border-radius: 30px; /* Закругленные углы */
+    padding: 10px 20px; /* Отступы внутри кнопки */
+    font-size: 50px; /* Размер шрифта */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer; /* Указываем, что это кнопка */
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2); /* Тень для глубины */
+    transition: background-color 0.3s; /* Плавный переход цвета фона */
+    border: none;
 }
