--- a/bonch-app/src/components/header/addDeadline/addDeadlineModal/addDeadlineModal.css
+++ b/bonch-app/src/components/header/addDeadline/addDeadlineModal/addDeadlineModal.css
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: column;
     font-family: 'AKONY', sans-serif;
+    align-items: center;
 }
 .modal-text{
     font-size: 18px;
@@ -29,6 +30,8 @@
     font-size: 11px;
 }
 .addDeadline input {
+    width: 100%;
+    color: white;
     background-color: #D9D9D9;
     height: 50px;
     text-align: center;
@@ -64,4 +67,5 @@ button.close-button {
     border: none;
     width: 100%;
     border: 2px solid black;
+    text-decoration: none;
 }
