--- a/bonch-app/src/App.css
+++ b/bonch-app/src/App.css
@@ -1,11 +1,16 @@
-@import url('https://fonts.cdnfonts.com/css/akony');
+@font-face {
+    font-family: 'CenturyGothic'; /* Замените на имя вашего шрифта */
+    src: url('./font/centurygothic.ttf') format('truetype');
+    font-weight: normal; /* Укажите, если шрифт жирный или обычный */
+    font-style: normal; /* Укажите стиль шрифта (normal, italic и т.д.) */
+}
 html, body {
     margin: 0;
     padding: 0;
     height: 100%; /* Задаем высоту 100% для body */
     /* background-color:var(--tg-theme-bg-color); */
-    background-color: #17212b;
-    font-family: 'AKONY', sans-serif;
+    background-color:#3c3c3c;
+    font-family: 'CenturyGothic', sans-serif;
 }
 .App{
     display: flex;
@@ -31,26 +36,26 @@ html, body {
     top: 50%;
 }
 .cross, .plus {
-    background-color: white;
+    background-color: #EEA21B;
     position: absolute;
     border-radius: 5px;
 }
 
 .cross {
     width: 3px;
-    height: 20px;
+    height: 30px;
     transform: rotate(45deg);
 }
 
 .cross:before {
     content: '';
-    width: 20px;
+    width: 30px;
     height: 3px;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    background-color: white;
+    background-color: #EEA21B;
     border-radius: 5px;
 }
 .plus {
