--- a/bonch-app/src/components/main/main.css
+++ b/bonch-app/src/components/main/main.css
@@ -2,48 +2,74 @@
     flex: 1;
     overflow-y: auto; 
 }
-.search-input{
-    height: 50px;
-    border-radius: 30px;
-    width: 95%;
-    text-align: center;
-    background-color:#D9D9D9;
-    font-size: 2em;
-    color: white;
-    border: none;
-    font-family: 'AKONY', sans-serif;
+
+.search-container {
+    width: 68%;
+    left: -10%;
+    margin: 0 auto;
+    position: relative;
 }
-input::placeholder {
-    color: white;
-    font-family: 'AKONY', sans-serif;
+.search-container input{
+    border-style: none;
+    font-size: 25px;
+}
+.search-input {
+    height: 30px;
+    width: 100%;
+    color: #EFA31A;
+    background-color:#545454 ;
+    padding: 10px 40px 10px 40px; /* Отступы для поля ввода */
+    border-radius: 5px; /* Закругление углов */
+    font-size: 16px; /* Размер шрифта */
+    border: none;
+}
+
+.search-input::placeholder {
+    color: #EFA31A; /* Цвет текста подсказки */
+}
+
+.search-icon {
+    position: absolute;
+    left: 10px; /* Отступ от левого края */
+    top: 50%; /* Центрируем по вертикали */
+    transform: translateY(-50%); /* Центрируем по вертикали */
+    width: 20px; /* Ширина иконки */
+    height: 20px; /* Высота иконки */
+    fill: #333; /* Цвет иконки */
 }
 .noDeadline{
-    color: white;
+    color: #EFA31A;
     position: absolute;
-    top: 50%;   
+    top: 50%;
+    font-weight: 700;
+    font-size: 2em;
 }
 .order-container{
+    margin-top: 2%;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 .fixed-button{
+    border: none;
     position: fixed; /* Фиксированное позиционирование */
     bottom: 20px; /* Отступ от нижней части окна */
-    width: 60px;
+    width: 80%;
     height: 60px;
-    right: 20px; /* Отступ от правой части окна */
-    background-color: #37AD00; /* Цвет фона кнопки */
-    color: white; /* Цвет текста */
+    right: 10%;
+    background-color: #EFA31A; /* Цвет фона кнопки */
+    color: black; /* Цвет текста */
     border: none; /* Убираем рамку */
-    border-radius: 30px; /* Закругленные углы */
+    border-radius: 5px; /* Закругленные углы */
     padding: 10px 20px; /* Отступы внутри кнопки */
-    font-size: 50px; /* Размер шрифта */
+    font-size: 1.5em; /* Размер шрифта */
     display: flex;
+    font-weight: 700;
     align-items: center;
     justify-content: center;
     cursor: pointer; /* Указываем, что это кнопка */
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2); /* Тень для глубины */
     transition: background-color 0.3s; /* Плавный переход цвета фона */
     border: none;
+    font-family: 'CenturyGothic', sans-serif;
 }
